Updated page TechDraw StackDown/fr

--- a/wiki/fr/TechDraw_StackDown.html
+++ b/wiki/fr/TechDraw_StackDown.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw StackDown/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+StackDown&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_StackDown.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw StapelNachUnten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_StackDown.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw StackDown (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_StackDown.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Sposta gi&ugrave; (57% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_StackDown.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Przesu&#324; poziom w d&oacute;&#322; (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Empilement &rarr; D&eacute;placer la vue vers le bas d'un niveau
+<td class="ctEven">TechDraw &rarr; Empilement &rarr; Descendre dans la pile
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Empiler vers le bas</b> d&eacute;place les vues d'un niveau inf&eacute;rieur dans l'ordre d'empilement. L'ordre d'empilement contr&ocirc;le la profondeur apparente des vues sur une feuille.
 </p><p>Voir <a href="../fr/TechDraw_StackTop.html" title="TechDraw StackTop/fr">TechDraw Empiler en haut</a>.
@@ -102,31 +100,31 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124124847
+Cached time: 20260124125001
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.112 seconds
-Preprocessor visited node count: 323/1000000
-Post&#8208;expand include size: 24463/2097152 bytes
-Template argument size: 9930/2097152 bytes
+CPU time usage: 0.088 seconds
+Real time usage: 0.123 seconds
+Preprocessor visited node count: 322/1000000
+Post&#8208;expand include size: 24427/2097152 bytes
+Template argument size: 9894/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1212/5000000 bytes
+Unstrip post&#8208;expand size: 1216/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.714      1 -total
- 42.64%   11.816      1 Template:TechDraw_Tools_navi/fr
- 28.25%    7.830      2 Template:Navigation_menu_2
- 24.81%    6.877      1 Template:Userdocnavi/fr
- 19.38%    5.370      1 Template:GuiCommand/fr
- 11.48%    3.180      2 Template:Docnav/fr
+100.00%   24.351      1 -total
+ 40.46%    9.852      1 Template:TechDraw_Tools_navi/fr
+ 32.61%    7.940      2 Template:Navigation_menu_2
+ 24.73%    6.022      1 Template:Userdocnavi/fr
+ 16.64%    4.051      1 Template:GuiCommand/fr
+ 15.95%    3.884      2 Template:Docnav/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:296991-0!canonical and timestamp 20260124124847 and revision id 1743383. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:296991-0!canonical and timestamp 20260124125001 and revision id 1743385. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
