--- a/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
@@ -11,7 +11,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -22,7 +21,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: attributs/modifications &rarr; Choisir les attributs d'une ligne
+<td class="ctEven">TechDraw &rarr; Attributs/modifications &rarr; Choisir les attributs d'une ligne
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -51,7 +50,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <div class="mw-translate-fuzzy">
 <p>L'outil <b>TechDraw Choix des attributs</b> ouvre une fen&ecirc;tre de dialogue dans laquelle vous pouvez s&eacute;lectionner les attributs (style, largeur et couleur) des nouvelles lignes cosm&eacute;tiques et des lignes centrales cr&eacute;&eacute;es avec les outils <a href="../fr/TechDraw_Workbench.html#Extensions" title="TechDraw Workbench/fr">Extensions</a>, et sp&eacute;cifier un espacement en cascade et une longueur. Les attributs de ligne sont &eacute;galement utilis&eacute;s par l'outil <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">TechDraw Modification des attributs</a>.
@@ -128,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125124
+Cached time: 20260124125244
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.116 seconds
-Preprocessor visited node count: 404/1000000
-Post&#8208;expand include size: 26331/2097152 bytes
-Template argument size: 10360/2097152 bytes
+CPU time usage: 0.083 seconds
+Real time usage: 0.124 seconds
+Preprocessor visited node count: 403/1000000
+Post&#8208;expand include size: 26305/2097152 bytes
+Template argument size: 10334/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -144,18 +142,18 @@ Unstrip post&#8208;expand size: 1413/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.115      1 -total
- 29.87%    5.112      1 Template:TechDraw_Tools_navi/fr
- 23.81%    4.075      2 Template:Navigation_menu_2
- 18.57%    3.178      1 Template:Userdocnavi/fr
- 12.39%    2.121      1 Template:GuiCommand/fr
- 11.44%    1.958      2 Template:Docnav/fr
-  7.62%    1.305      1 Template:Caption
-  6.24%    1.067      2 Template:Button
-  5.82%    0.995      6 Template:MenuCommand
+100.00%   23.063      1 -total
+ 32.13%    7.411      1 Template:TechDraw_Tools_navi/fr
+ 23.93%    5.520      2 Template:Navigation_menu_2
+ 17.60%    4.060      1 Template:Userdocnavi/fr
+ 12.73%    2.935      2 Template:Docnav/fr
+ 10.78%    2.485      1 Template:GuiCommand/fr
+  8.15%    1.880      1 Template:Caption
+  7.63%    1.759      6 Template:MenuCommand
+  7.32%    1.688      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124125124 and revision id 1743389. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124125243 and revision id 1743391. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
