--- a/wiki/fr/TechDraw_Workbench.html
+++ b/wiki/fr/TechDraw_Workbench.html
@@ -157,9 +157,7 @@
 <ul><li><a href="../index.php?title=TechDraw_AlignVertexesHorizontally&amp;action=edit&amp;redlink=1.html" class="new" title="TechDraw AlignVertexesHorizontally (page does not exist)">Align Vertices/Edge Horizontally</a></li></ul>
 <p><span id="Attributes/Modifications"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span class="mw-headline" id="Attributs_et_modifications">Attributs et modifications</span></h4>
-</div>
+<h3><span id="Attributs.2Fmodifications"></span><span class="mw-headline" id="Attributs/modifications">Attributs/modifications</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>&nbsp;: s&eacute;lectionne les attributs (style, largeur et couleur) des nouvelles lignes cosm&eacute;tiques et des lignes centrales, et sp&eacute;cifie l'espacement en cascade et la distance delta.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionChangeLineAttributes.svg&amp;filetimestamp=20241126213021&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionChangeLineAttributes.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>&nbsp;: modifie les attributs (style, largeur et couleur) des lignes cosm&eacute;tiques et des lignes centrales.</li></ul>
 <div class="mw-translate-fuzzy">
@@ -416,13 +414,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119185105
+Cached time: 20260124125709
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.346 seconds
-Real time usage: 1.238 seconds
-Preprocessor visited node count: 951/1000000
+CPU time usage: 0.324 seconds
+Real time usage: 0.419 seconds
+Preprocessor visited node count: 950/1000000
 Post&#8208;expand include size: 25621/2097152 bytes
 Template argument size: 9078/2097152 bytes
 Highest expansion depth: 5/100
@@ -432,18 +430,18 @@ Unstrip post&#8208;expand size: 4474/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   84.405      1 -total
- 29.31%   24.736      1 Template:Userdocnavi/fr
- 19.46%   16.422      1 Template:TechDraw_Tools_navi/fr
- 15.38%   12.983      1 Template:TOCright
- 11.28%    9.519      2 Template:Navigation_menu_2
- 10.32%    8.712     25 Template:Version/fr
-  8.43%    7.115      5 Template:VersionPlus/fr
-  7.74%    6.535      1 Template:KEY
-  6.74%    5.687      2 Template:Docnav/fr
+100.00%   26.797      1 -total
+ 24.74%    6.629      1 Template:TechDraw_Tools_navi/fr
+ 19.04%    5.103      2 Template:Navigation_menu_2
+ 14.45%    3.872     25 Template:Version/fr
+ 14.18%    3.800      1 Template:Userdocnavi/fr
+ 12.46%    3.339      2 Template:Docnav/fr
+ 11.24%    3.012      5 Template:VersionPlus/fr
+  7.27%    1.948      1 Template:KEY
+  5.17%    1.385      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260119185103 and revision id 1741096. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260124125708 and revision id 1743393. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
