Updated page Books

--- a/wiki/Books.html
+++ b/wiki/Books.html
@@ -11,11 +11,9 @@
 <meta property="mw:PageProp/toc">
 <h2><span id="FreeCAD_Beginner.E2.80.99s_Handbook"></span><span class="mw-headline" id="FreeCAD_Beginner&rsquo;s_Handbook">FreeCAD Beginner&rsquo;s Handbook</span></h2>
 <p>By Aleksander Sadowski, published December 2025, paperback
-</p><p><br>
 </p>
-<figure class="mw-default-size" typeof="mw:File/Thumb"><a href="File/Freecad-beginners-handbook-book-cover-v2.jpg" class="mw-file-description"><img alt="FreeCAD Beginners Handbook cover" src="File/Freecad-beginners-handbook-book-cover-v2.jpg" decoding="async" width="300" height="431" class="mw-file-element" data-file-width="1000" data-file-height="1436"></a><figcaption>The FreeCAD Beginners Handbook includes a mars rover project for readers to create from scratch at the end of the book.</figcaption></figure>
-<p><br>
-Learn 3D design with FreeCAD through real-world examples and hands-on projects.
+<figure class="mw-default-size" typeof="mw:File/Thumb"><a href="File/Freecad-beginners-handbook-book-cover-v2.jpg" class="mw-file-description"><img src="File/Freecad-beginners-handbook-book-cover-v2.jpg" decoding="async" width="300" height="431" class="mw-file-element" data-file-width="1000" data-file-height="1436"></a><figcaption></figcaption></figure>
+<p>Learn 3D design with FreeCAD through real-world examples and hands-on projects.
 </p><p>Discover the world of 3D design with FreeCAD, the free and open-source CAD software used by engineers, designers, and makers worldwide. This full-color, practical guide takes you step by step through a reliable modeling workflow, showing you how to create real-world products and inventions, and even complete a complex project like designing a Mars Rover from scratch to solidify your knowledge.
 </p>
 <ul><li>Gain the confidence to develop your own inventions, from initial idea to finished, 3D-printable product.</li>
@@ -68,12 +66,12 @@ Learn 3D design with FreeCAD through real-world examples and hands-on projects.
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123115243
+Cached time: 20260124125745
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.049 seconds
-Real time usage: 0.069 seconds
+CPU time usage: 0.056 seconds
+Real time usage: 0.067 seconds
 Preprocessor visited node count: 73/1000000
 Post&#8208;expand include size: 150/2097152 bytes
 Template argument size: 0/2097152 bytes
@@ -84,11 +82,11 @@ Unstrip post&#8208;expand size: 1367/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.650      1 -total
- 86.84%    1.433      5 Template:Clear
+100.00%    1.400      1 -total
+ 81.35%    1.139      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297843-0!canonical and timestamp 20260123115337 and revision id 1742871. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297843-0!canonical and timestamp 20260124125747 and revision id 1743394. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
