--- a/wiki/Books.html
+++ b/wiki/Books.html
@@ -1,11 +1,11 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Books</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Books&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Books.html" class="mw-pt-progress mw-pt-progress--complete" title="B&uuml;cher (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Books.html" class="mw-pt-progress mw-pt-progress--high" title="B&uuml;cher (96% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Books.html" class="mw-pt-progress mw-pt-progress--complete" title="Livres (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Libri (77% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Books.html" class="mw-pt-progress mw-pt-progress--complete" title="Ksi&#261;&#380;ki o FreeCAD (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Livres (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Libri (74% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Ksi&#261;&#380;ki o FreeCAD (96% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="ru/Books.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1085;&#1080;&#1075;&#1080; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
-<li><a href="ko/Books.html" class="mw-pt-progress mw-pt-progress--high" title="&#52293; (77% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
+<li><a href="ko/Books.html" class="mw-pt-progress mw-pt-progress--high" title="&#52293; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <p>This page lists the books about FreeCAD we know of:
 </p>
 <meta property="mw:PageProp/toc">
@@ -66,27 +66,27 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125745
+Cached time: 20260124125839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.056 seconds
-Real time usage: 0.067 seconds
-Preprocessor visited node count: 73/1000000
+CPU time usage: 0.073 seconds
+Real time usage: 0.090 seconds
+Preprocessor visited node count: 75/1000000
 Post&#8208;expand include size: 150/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1367/5000000 bytes
+Unstrip post&#8208;expand size: 1352/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.400      1 -total
- 81.35%    1.139      5 Template:Clear
+100.00%    1.224      1 -total
+ 82.60%    1.011      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297843-0!canonical and timestamp 20260124125747 and revision id 1743394. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297843-0!canonical and timestamp 20260124125839 and revision id 1743395. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
