--- a/wiki/fr/TechDraw_Workbench.html
+++ b/wiki/fr/TechDraw_Workbench.html
@@ -234,7 +234,9 @@
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionLinePerpendicular.svg&amp;filetimestamp=20240706151323&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionLinePerpendicular.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">Ligne perpendiculaire</a>&nbsp;: dessine une ligne cosm&eacute;tique perpendiculaire &agrave; une autre ligne passant par un sommet.</li></ul></dd></dl>
 </div>
-<h3><span id="Format.2FOrganize_Dimensions"></span><span class="mw-headline" id="Format/Organize_Dimensions">Format/Organize Dimensions</span></h3>
+<p><span id="Format/Organize_Dimensions"></span>
+</p>
+<h3><span id="Formater.2Forganiser_les_cotes"></span><span class="mw-headline" id="Formater/organiser_les_cotes">Formater/organiser les cotes</span></h3>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/fr">Cotes horizontales</a>&nbsp;: cr&eacute;e une s&eacute;quence horizontale de cotes.</span></li></ul></dd></dl>
 </div>
@@ -414,13 +416,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125709
+Cached time: 20260124130030
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.324 seconds
-Real time usage: 0.419 seconds
-Preprocessor visited node count: 950/1000000
+CPU time usage: 0.374 seconds
+Real time usage: 0.528 seconds
+Preprocessor visited node count: 951/1000000
 Post&#8208;expand include size: 25621/2097152 bytes
 Template argument size: 9078/2097152 bytes
 Highest expansion depth: 5/100
@@ -430,18 +432,18 @@ Unstrip post&#8208;expand size: 4474/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.797      1 -total
- 24.74%    6.629      1 Template:TechDraw_Tools_navi/fr
- 19.04%    5.103      2 Template:Navigation_menu_2
- 14.45%    3.872     25 Template:Version/fr
- 14.18%    3.800      1 Template:Userdocnavi/fr
- 12.46%    3.339      2 Template:Docnav/fr
- 11.24%    3.012      5 Template:VersionPlus/fr
-  7.27%    1.948      1 Template:KEY
-  5.17%    1.385      1 Template:TOCright
+100.00%   31.057      1 -total
+ 33.11%   10.283      1 Template:TechDraw_Tools_navi/fr
+ 23.24%    7.218      2 Template:Navigation_menu_2
+ 14.26%    4.429      1 Template:Userdocnavi/fr
+ 11.63%    3.611      5 Template:VersionPlus/fr
+ 10.64%    3.304      2 Template:Docnav/fr
+  9.54%    2.962      1 Template:TOCright
+  8.97%    2.785     25 Template:Version/fr
+  4.56%    1.417      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260124125708 and revision id 1743393. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260124130029 and revision id 1743405. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
