Updated page TechDraw ExtensionSelectLineAttributes/fr

--- a/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionSelectLineAttributes/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionSelectLineAttributes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLinienmerkmaleAusw&auml;hlen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionSelectLineAttributes (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Seleziona attributi linea (45% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wybierz atrybuty linii, rozmieszczenie i odleg&#322;o&#347;&#263; delta (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -63,16 +63,14 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Choisir les attributs d'une ligne</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Extensions&nbsp;: Attributs/Modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Choisir les attributs d'une ligne</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Attributs/modifications &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes.svg&amp;filetimestamp=20240706152455&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Choisir les attributs d'une ligne</b> du menu.</li></ul></li>
 <li>Le panneau de t&acirc;ches <b>Choisir les attributs de la ligne</b> s'ouvre.</li>
-<li>Changez &agrave; votre convenance le <b>Style des lignes</b>, la <b>Largeur des lignes</b> et la <b>Couleur des lignes</b>.</li>
-<li>Vous pouvez &eacute;galement modifier l'espacement en cascade. Les outils <a href="../fr/TechDraw_Workbench.html#Caract.C3.A9ristiques_et_modifications" title="TechDraw Workbench/fr">Cotes en cascade</a> et les outils <a href="../fr/TechDraw_Workbench.html#Cotes" title="TechDraw Workbench/fr">Cr&eacute;er des dimensions en coordonn&eacute;es</a> utilisent cette valeur.</li>
-<li>Vous pouvez &eacute;galement modifier la <b>Distance delta</b>. Les outils <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">TechDraw Prolonger</a> et <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">TechDraw Raccourcir</a> utilisent cette valeur.</li>
+<li>Changez &agrave; votre convenance <b>Style des lignes</b>, <b>Largeur des lignes</b> et <b>Couleur des lignes</b>.</li>
+<li>Vous pouvez &eacute;galement modifier <b>Espacement en cascade</b>. Les outils <a href="../fr/TechDraw_Workbench.html#Attributs/modifications" title="TechDraw Workbench/fr">Cotes en cascade</a> et <a href="../fr/TechDraw_Workbench.html#Formater/organiser_les_cotes" title="TechDraw Workbench/fr">Cotes parall&egrave;les</a> utilisent cette valeur.</li>
+<li>Vous pouvez &eacute;galement modifier <b>Longueur</b>. Les outils <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionExtendLine.svg&amp;filetimestamp=20240706214233&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionExtendLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">TechDraw Prolonger</a> et <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionShortenLine.svg&amp;filetimestamp=20240706214325&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionShortenLine.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">TechDraw Raccourcir</a> utilisent cette valeur.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -126,34 +124,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125244
+Cached time: 20260124130459
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.124 seconds
-Preprocessor visited node count: 403/1000000
-Post&#8208;expand include size: 26305/2097152 bytes
-Template argument size: 10334/2097152 bytes
+CPU time usage: 0.089 seconds
+Real time usage: 0.135 seconds
+Preprocessor visited node count: 408/1000000
+Post&#8208;expand include size: 26313/2097152 bytes
+Template argument size: 10336/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1413/5000000 bytes
+Unstrip post&#8208;expand size: 1414/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.063      1 -total
- 32.13%    7.411      1 Template:TechDraw_Tools_navi/fr
- 23.93%    5.520      2 Template:Navigation_menu_2
- 17.60%    4.060      1 Template:Userdocnavi/fr
- 12.73%    2.935      2 Template:Docnav/fr
- 10.78%    2.485      1 Template:GuiCommand/fr
-  8.15%    1.880      1 Template:Caption
-  7.63%    1.759      6 Template:MenuCommand
-  7.32%    1.688      2 Template:Button
+100.00%   38.605      1 -total
+ 37.36%   14.424      1 Template:TechDraw_Tools_navi/fr
+ 27.81%   10.736      2 Template:Navigation_menu_2
+ 16.24%    6.269      1 Template:GuiCommand/fr
+ 14.41%    5.563      1 Template:Userdocnavi/fr
+  9.65%    3.725      2 Template:Docnav/fr
+  8.86%    3.419      7 Template:MenuCommand
+  6.98%    2.694      1 Template:Caption
+  3.81%    1.471      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124125243 and revision id 1743391. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124130459 and revision id 1743407. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
