--- a/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
@@ -51,11 +51,8 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<div class="mw-translate-fuzzy">
-<p>L'outil <b>TechDraw Choix des attributs</b> ouvre une fen&ecirc;tre de dialogue dans laquelle vous pouvez s&eacute;lectionner les attributs (style, largeur et couleur) des nouvelles lignes cosm&eacute;tiques et des lignes centrales cr&eacute;&eacute;es avec les outils <a href="../fr/TechDraw_Workbench.html#Extensions" title="TechDraw Workbench/fr">Extensions</a>, et sp&eacute;cifier un espacement en cascade et une longueur. Les attributs de ligne sont &eacute;galement utilis&eacute;s par l'outil <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">TechDraw Modification des attributs</a>.
-</p>
-</div>
-<p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes_Taskpanel.png&amp;filetimestamp=20220207092623&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes_Taskpanel.png" decoding="async" width="268" height="451" class="mw-file-element" data-file-width="268" data-file-height="451"></a></span>
+<p>L'outil <b>TechDraw Choix des attributs</b> ouvre un panneau de t&acirc;ches dans lequelle vous pouvez s&eacute;lectionner les attributs (style, largeur et couleur) des nouvelles lignes cosm&eacute;tiques et des lignes centrales cr&eacute;&eacute;es avec les outils d'extensions, et sp&eacute;cifier un espacement en cascade et une longueur. Les attributs de ligne sont &eacute;galement utilis&eacute;s par l'outil <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">TechDraw Modification des attributs</a>.
+</p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionSelectLineAttributes_Taskpanel.png&amp;filetimestamp=20220207092623&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionSelectLineAttributes_Taskpanel.png" decoding="async" width="268" height="451" class="mw-file-element" data-file-width="268" data-file-height="451"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Le panneau de t&acirc;ches Choisir les attributs de la ligne</p>
@@ -124,13 +121,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124130459
+Cached time: 20260124130610
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.135 seconds
-Preprocessor visited node count: 408/1000000
+CPU time usage: 0.097 seconds
+Real time usage: 0.132 seconds
+Preprocessor visited node count: 406/1000000
 Post&#8208;expand include size: 26313/2097152 bytes
 Template argument size: 10336/2097152 bytes
 Highest expansion depth: 6/100
@@ -140,18 +137,18 @@ Unstrip post&#8208;expand size: 1414/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.605      1 -total
- 37.36%   14.424      1 Template:TechDraw_Tools_navi/fr
- 27.81%   10.736      2 Template:Navigation_menu_2
- 16.24%    6.269      1 Template:GuiCommand/fr
- 14.41%    5.563      1 Template:Userdocnavi/fr
-  9.65%    3.725      2 Template:Docnav/fr
-  8.86%    3.419      7 Template:MenuCommand
-  6.98%    2.694      1 Template:Caption
-  3.81%    1.471      2 Template:Button
+100.00%   23.982      1 -total
+ 33.45%    8.022      1 Template:TechDraw_Tools_navi/fr
+ 28.78%    6.902      2 Template:Navigation_menu_2
+ 16.96%    4.067      1 Template:GuiCommand/fr
+ 15.58%    3.736      1 Template:Userdocnavi/fr
+  9.63%    2.310      2 Template:Docnav/fr
+  7.23%    1.733      1 Template:Caption
+  7.19%    1.724      7 Template:MenuCommand
+  5.61%    1.345      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124130459 and revision id 1743407. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124130610 and revision id 1743409. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
