Updated page TechDraw ExtensionSelectLineAttributes/fr

--- a/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
+++ b/wiki/fr/TechDraw_ExtensionSelectLineAttributes.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionSelectLineAttributes/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionSelectLineAttributes&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungLinienmerkmaleAusw&auml;hlen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionSelectLineAttributes (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Seleziona attributi linea (45% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ExtensionSelectLineAttributes.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Wybierz atrybuty linii, rozmieszczenie i odleg&#322;o&#347;&#263; delta (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
@@ -72,14 +72,12 @@
 <ul><li>Les valeurs sp&eacute;cifi&eacute;es ne seront utilis&eacute;es que dans la session FreeCAD en cours.</li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_HoleShaftFit.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_HoleShaftFit.html" title="TechDraw HoleShaftFit/fr">Tol&eacute;rance de trou/d'arbre</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackDown.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackDown.html" title="TechDraw StackDown/fr">Empiler vers le bas</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionChangeLineAttributes.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -119,34 +117,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124130724
+Cached time: 20260124130746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.129 seconds
-Preprocessor visited node count: 405/1000000
-Post&#8208;expand include size: 26313/2097152 bytes
-Template argument size: 10336/2097152 bytes
+CPU time usage: 0.094 seconds
+Real time usage: 0.121 seconds
+Preprocessor visited node count: 404/1000000
+Post&#8208;expand include size: 26274/2097152 bytes
+Template argument size: 10310/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1414/5000000 bytes
+Unstrip post&#8208;expand size: 1418/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.844      1 -total
- 28.12%    6.424      1 Template:Userdocnavi/fr
- 27.51%    6.285      2 Template:Navigation_menu_2
- 26.19%    5.982      1 Template:TechDraw_Tools_navi/fr
- 11.85%    2.708      2 Template:Docnav/fr
- 11.15%    2.546      1 Template:GuiCommand/fr
-  7.12%    1.627      7 Template:MenuCommand
-  6.32%    1.444      1 Template:Caption
-  5.64%    1.288      2 Template:Button
+100.00%   23.812      1 -total
+ 36.89%    8.784      1 Template:TechDraw_Tools_navi/fr
+ 28.61%    6.813      2 Template:Navigation_menu_2
+ 18.34%    4.368      1 Template:Userdocnavi/fr
+ 11.76%    2.801      1 Template:GuiCommand/fr
+ 10.55%    2.513      2 Template:Docnav/fr
+  7.29%    1.736      1 Template:Caption
+  5.65%    1.345      7 Template:MenuCommand
+  5.09%    1.211      2 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124130724 and revision id 1743411. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277504-0!canonical and timestamp 20260124130746 and revision id 1743413. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
