--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -1,5 +1,7 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Release notes 1.2</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Release+notes+1.2&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li></ul></div>
+<li><a href="de/Release_notes_1.2.html" class="mw-pt-progress mw-pt-progress--complete" title="Versionshinweise 1.2 (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
+<li><a href="fr/Release_notes_1.2.html" class="mw-pt-progress mw-pt-progress--complete" title="Notes de version 1.2 (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <div class="warning-box">FreeCAD 1.2 is under development, there is no expected released date yet.</div>
 <div id="itsstillfree" style="text-align:center; background: var(--background-color-neutral-subtle, #e0e0ee); border: 2px solid var(--border-color-warning, #bb7736); color: var(--color-base, #202122); padding: 0.5em clamp(1em, 5vw, 2em); margin: 1em clamp(1em, 6vw, 7em); word-break: normal; overflow-wrap: break-word;">
 <p>Are features missing? Mention them in the <a rel="nofollow" class="external text" href="https://forum.freecad.org/viewtopic.php?f=10&amp;t=101169">Release notes for v1.2</a> forum thread.<br>
@@ -74,7 +76,9 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h3><span class="mw-headline" id="Further_Robot_improvements">Further Robot improvements</span></h3>
 <h2><span class="mw-headline" id="Sketcher_Workbench">Sketcher Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_Sketcher_improvements">Further Sketcher improvements</span></h3>
-<ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li></ul>
+<ul><li>It is now possible to import B&eacute;zier and Offset curves as <span typeof="mw:File"><a href="index.php?title=Sketcher_Projection.svg&amp;filetimestamp=20241129200338&amp;.html" class="mw-file-description"><img src="File/Sketcher_Projection.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Sketcher_Projection.html" title="Sketcher Projection">External geometry</a>. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25144">Pull request #25144</a></li>
+<li>When creating or editing circular dimensions it is now possible to switch between the radius or diameter type. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/26794">Pull request #26794</a></li>
+<li>The constraint list now displays the type of the constraints in the name. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/26797">Pull request #26797</a></li></ul>
 <h2><span class="mw-headline" id="Spreadsheet_Workbench">Spreadsheet Workbench</span></h2>
 <h3><span class="mw-headline" id="Further_Spreadsheet_improvements">Further Spreadsheet improvements</span></h3>
 <h2><span class="mw-headline" id="Surface_Workbench">Surface Workbench</span></h2>
@@ -84,30 +88,30 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260114150248
+Cached time: 20260124145414
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.067 seconds
-Real time usage: 0.086 seconds
+CPU time usage: 0.068 seconds
+Real time usage: 0.082 seconds
 Preprocessor visited node count: 216/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 519/5000000 bytes
+Unstrip post&#8208;expand size: 857/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.266      1 -total
- 44.08%    4.966      1 Template:VeryImportantMessage
- 40.90%    4.608      2 Template:Message
- 13.63%    1.535      1 Template:FileName
- 10.68%    1.203      1 Template:TOCright
+100.00%    4.749      1 -total
+ 42.20%    2.004      2 Template:Message
+ 26.59%    1.263      1 Template:TOCright
+ 25.12%    1.193      1 Template:VeryImportantMessage
+ 23.37%    1.110      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260114150248 and revision id 1738197. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260124145414 and revision id 1743415. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
