--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -29,7 +29,8 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 </td></tr></tbody></table>
 <h4><span class="mw-headline" id="Further_Core_improvements">Further Core improvements</span></h4>
 <ul><li>The search bar in the <span typeof="mw:File"><a href="index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_DlgPreferences.html" title="Std DlgPreferences">Preferences</a> is now able to search through tooltips, dropdown values, checkboxes and group titles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
-<li>The <span typeof="mw:File"><a href="index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li></ul>
+<li>The <span typeof="mw:File"><a href="index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li>
+<li>On macOS the .FCStd files now support the native QuickLook extension to show a thumbnail of the file in the finder and the full preview. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25239">Pull request #25239</a></li></ul>
 <h3><span class="mw-headline" id="API">API</span></h3>
 <h4><span class="mw-headline" id="Removed_Python_API">Removed Python API</span></h4>
 <h4><span class="mw-headline" id="Changed_Python_API">Changed Python API</span></h4>
@@ -88,12 +89,12 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260124145414
+Cached time: 20260124145624
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.082 seconds
+CPU time usage: 0.062 seconds
+Real time usage: 0.064 seconds
 Preprocessor visited node count: 216/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
@@ -104,14 +105,14 @@ Unstrip post&#8208;expand size: 857/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.749      1 -total
- 42.20%    2.004      2 Template:Message
- 26.59%    1.263      1 Template:TOCright
- 25.12%    1.193      1 Template:VeryImportantMessage
- 23.37%    1.110      1 Template:FileName
+100.00%    3.720      1 -total
+ 43.31%    1.611      2 Template:Message
+ 25.54%    0.950      1 Template:VeryImportantMessage
+ 23.60%    0.878      1 Template:TOCright
+ 19.76%    0.735      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260124145414 and revision id 1743415. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260124145631 and revision id 1743416. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
