--- a/wiki/pl/Books.html
+++ b/wiki/pl/Books.html
@@ -3,7 +3,7 @@
 <li><a href="../Books.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Books (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Livres (96% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Books.html" class="mw-pt-progress mw-pt-progress--high" title="Libri (74% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../ru/Books.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1085;&#1080;&#1075;&#1080; (4% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Books.html" class="mw-pt-progress mw-pt-progress--high" title="&#52293; (74% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <p>Na tej stronie znajduje si&#281; lista znanych nam ksi&#261;&#380;ek o programie FreeCAD:
@@ -23,12 +23,8 @@
 <li>Przygotowuj i eksportuj modele do druku 3D z u&#380;yciem oprogramowania typu slicer, tak aby Twoje projekty by&#322;y gotowe do produkcji.</li>
 <li>Realizuj projekty ucz&#261;ce rzeczywistych zastosowa&#324; projektowania 3D, w tym praktyczne gad&#380;ety oraz projekt &#322;azika marsja&#324;skiego w celu utrwalenia umiej&#281;tno&#347;ci.</li></ul>
 <p>Pod koniec tej ksi&#261;&#380;ki b&#281;dziesz w stanie projektowa&#263; w&#322;asne innowacyjne gad&#380;ety, poznawa&#263; rzeczywiste rozwi&#261;zania in&#380;ynierskie oraz z pewno&#347;ci&#261; przygotowywa&#263; modele do druku 3D. Do&#322;&#261;czony projekt &#322;azika marsja&#324;skiego stanowi wymagaj&#261;c&#261;, a jednocze&#347;nie satysfakcjonuj&#261;c&#261; okazj&#281; do zastosowania wszystkich poznanych technik w jednym, sp&oacute;jnym projekcie.
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The FreeCAD Beginner's Handbook was sponsored by Prusa Research.
-</p>
-</div>
-<p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
+</p><p>Podr&#281;cznik pocz&#261;tkuj&#261;cego u&#380;ytkownika FreeCAD by&#322; sponsorowany przez Prusa Research.
+</p><p><b><a rel="nofollow" class="external free" href="https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX">https://www.amazon.com/FreeCAD-Beginners-Handbook-Aleksander-Sadowski/dp/B0G9HXYYGX</a></b>
 </p>
 <div style="clear:both"></div>
 <p><span id="FreeCAD_for_Makers"></span>
@@ -79,27 +75,27 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124125853
+Cached time: 20260124163446
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 48/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.058 seconds
+Preprocessor visited node count: 47/1000000
 Post&#8208;expand include size: 150/2097152 bytes
 Template argument size: 0/2097152 bytes
 Highest expansion depth: 2/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1336/5000000 bytes
+Unstrip post&#8208;expand size: 1340/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    1.857      1 -total
- 84.54%    1.570      5 Template:Clear
+100.00%    2.019      1 -total
+ 83.86%    1.693      5 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:298296-0!canonical and timestamp 20260124125853 and revision id 1743403. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:298296-0!canonical and timestamp 20260124163446 and revision id 1743419. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
