Updated page Release notes 1.2

--- a/wiki/Release_notes_1.2.html
+++ b/wiki/Release_notes_1.2.html
@@ -29,7 +29,7 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 </td></tr></tbody></table>
 <h4><span class="mw-headline" id="Further_Core_improvements">Further Core improvements</span></h4>
 <ul><li>The search bar in the <span typeof="mw:File"><a href="index.php?title=Std_DlgPreferences.svg&amp;filetimestamp=20240528092445&amp;.html" class="mw-file-description"><img src="File/Std_DlgPreferences.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_DlgPreferences.html" title="Std DlgPreferences">Preferences</a> is now able to search through tooltips, dropdown values, checkboxes and group titles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24283">Pull request #24283</a></li>
-<li>The <span typeof="mw:File"><a href="index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameter instead or radius. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li>
+<li>The <span typeof="mw:File"><a href="index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Measure.html" title="Std Measure">Measure</a> tool now has the option to display the measured result of circular elements as diameters instead of radii. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24853">Pull request #24853</a></li>
 <li>The <span typeof="mw:File"><a href="index.php?title=Std_Measure.svg&amp;filetimestamp=20240704211636&amp;.html" class="mw-file-description"><img src="File/Std_Measure.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="Std_Measure.html" title="Std Measure">Measure</a> tool now supports the measurement of the radius and diameter for cylindrical faces. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/27044">Pull request #27044</a></li>
 <li>On macOS the .FCStd files now support the native QuickLook extension to show a thumbnail of the file in the finder and the full preview. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25239">Pull request #25239</a></li></ul>
 <h3><span class="mw-headline" id="API">API</span></h3>
@@ -90,12 +90,12 @@ See <a href="Help_FreeCAD.html" title="Help FreeCAD">Help FreeCAD</a> for ways t
 <h2><span class="mw-headline" id="Import_and_export">Import and export</span></h2>
 <!-- 
 NewPP limit report
-Cached time: 20260124161720
+Cached time: 20260124163746
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.084 seconds
+CPU time usage: 0.075 seconds
+Real time usage: 0.092 seconds
 Preprocessor visited node count: 218/1000000
 Post&#8208;expand include size: 1351/2097152 bytes
 Template argument size: 454/2097152 bytes
@@ -106,14 +106,14 @@ Unstrip post&#8208;expand size: 857/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.261      1 -total
- 59.27%    3.711      2 Template:Message
- 19.50%    1.221      1 Template:VeryImportantMessage
- 18.16%    1.137      1 Template:FileName
- 15.21%    0.952      1 Template:TOCright
+100.00%    4.776      1 -total
+ 54.82%    2.618      2 Template:Message
+ 21.03%    1.004      1 Template:VeryImportantMessage
+ 19.30%    0.922      1 Template:FileName
+ 17.80%    0.850      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260124161745 and revision id 1743417. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:400690-0!canonical and timestamp 20260124163747 and revision id 1743420. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
